--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mousetrap": "^1.6.3",
     "rc-slider": "^8.6.1",
     "rc-switch": "^1.6.0",
-    "react": "^16.9.0",
+    "react": "^16.14.0",
     "react-albus": "^2.0.0",
     "react-autosuggest": "^9.3.4",
     "react-big-calendar": "^0.23.0",
@@ -23,7 +23,7 @@
     "react-circular-progressbar": "^2.0.2",
     "react-contextmenu": "^2.9.4",
     "react-datepicker": "^1.5.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.14.0",
     "react-dropzone-component": "^3.2.0",
     "react-google-maps": "^9.4.5",
     "react-image-lightbox": "^5.1.0",
@@ -35,13 +35,13 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
-    "react-select": "^2.0.0-beta.7",
+    "react-select": "^4.3.0",
     "react-sortablejs": "^1.3.6",
     "react-table": "6.10.3",
     "react-tagsinput": "^3.19.0",
     "react-transition-group": "^4.2.2",
     "react-yandex-maps": "^3.0.2",
-    "reactstrap": "^8.0.1",
+    "reactstrap": "^8.9.0",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "sortablejs": "^1.6.1",
